--- a/pkg/web/templates/index.html
+++ b/pkg/web/templates/index.html
@@ -2987,7 +2987,7 @@
           percent = Math.min(Math.max(percent, 3), 100);
           return ''
             + '<div class="space-y-2">'
-            + '  <div class="flex items-center justify-between text-sm font-medium text-gray-800">'
+            + '  <div class="flex items-center justify-between text-sm font-medium text-gray-800" style="border-bottom: ridge;">'
             + '    <span>' + escapeHtml(label) + '</span>'
             + '    <span>' + formatNumber(stat.count || 0) + '</span>'
             + '  </div>'
